--- a/rottenpotatoes/Gemfile
+++ b/rottenpotatoes/Gemfile
@@ -1,6 +1,6 @@
 source 'https://rubygems.org'
 
-ruby '2.6.6'
+ruby '2.6.3'
 gem 'rails', '4.2.11'
 
 # for Heroku deployment - as described in Ap. A of ELLS book
@@ -19,7 +19,7 @@ group :test do
   gem 'cucumber-rails-training-wheels'
 end
 group :production do
-  gem 'pg'
+  gem 'pg', '~> 1.2.3'
 end
 
 # Gems used only for assets and not required
